# isf

./: .rustfmt.toml  Cargo.toml  README.md
.github/buildomat/jobs/: build-and-test.sh
isf/: Cargo.toml
isf-macro/: Cargo.toml
isf-macro/src/: lib.rs
isf/src/: ast.rs  bits.rs  codegen.rs  docgen.rs  lib.rs  parse.rs  spec.rs
isf/testcase/: add-field-opt.isf  add-reg.isf  add.isf  add.rs  add_field_opt.rs  binop.isf  characteristics.isf  slice-add-contiguous.isf  slice-add.isf  slice_add.rs
template/: template.liquid
test/: Cargo.toml
test/src/: add.rs  add_field_opt.rs  binop.rs  lib.rs  slice_add.rs  slice_add_contiguous.rs
