[workspace]
resolver = "2"

members = [
  "isf",
  "isf-macro",
  "test",
]

[workspace.dependencies]
anyhow = "1.0.92"
expectorate = "1.1.0"
num_enum = "0.7.3"
prettyplease = "0.2.25"
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"] }
winnow = "0.6.20"
serde = "1"
clap = { version = "4.5.20", features = ["derive"] }
liquid = "0.26.9"

#[patch.crates-io]
#serde = { git = 'https://github.com/Mingun/serde.git', branch = "integer128" }
